feat(feature/graphql): Implementando consultas GraphQL

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,3 +17,13 @@ spring.jpa.open-in-view=false
 # Flyway Configuration
 spring.flyway.enabled=true
 spring.flyway.locations=classpath:db/migration
+
+# GraphQL Configuration
+spring.graphql.graphiql.enabled=true
+spring.graphql.graphiql.path=/graphiql
+spring.graphql.path=/graphql
+spring.graphql.websocket.path=/graphql-ws
+
+# GraphQL CORS Configuration
+spring.graphql.cors.allowed-origins=*
+spring.graphql.cors.allowed-methods=GET,POST
