--- a/src/main/resources/application-docker.properties
+++ b/src/main/resources/application-docker.properties
@@ -15,3 +15,8 @@ spring.jpa.open-in-view=false
 # Flyway Configuration
 spring.flyway.enabled=true
 spring.flyway.locations=classpath:db/migration
+
+# GraphQL Configuration
+spring.graphql.graphiql.enabled=true
+spring.graphql.graphiql.path=/graphiql
+spring.graphql.path=/graphql
