--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -27,3 +27,11 @@ spring.graphql.websocket.path=/graphql-ws
 # GraphQL CORS Configuration
 spring.graphql.cors.allowed-origins=*
 spring.graphql.cors.allowed-methods=GET,POST
+
+# RabbitMQ
+spring.rabbitmq.host=${RABBITMQ_HOST:localhost}
+spring.rabbitmq.port=${RABBITMQ_PORT:5672}
+spring.rabbitmq.username=${RABBITMQ_USER:guest}
+spring.rabbitmq.password=${RABBITMQ_PASSWORD:guest}
+spring.rabbitmq.ssl.enabled=false
+notifications.queue=consultation.notifications
