--- a/src/main/resources/application-docker.properties
+++ b/src/main/resources/application-docker.properties
@@ -20,3 +20,11 @@ spring.flyway.locations=classpath:db/migration
 spring.graphql.graphiql.enabled=true
 spring.graphql.graphiql.path=/graphiql
 spring.graphql.path=/graphql
+
+# RabbitMQ
+spring.rabbitmq.host=${RABBITMQ_HOST:rabbitmq}
+spring.rabbitmq.port=${RABBITMQ_PORT:5672}
+spring.rabbitmq.username=${RABBITMQ_USER:admin}
+spring.rabbitmq.password=${RABBITMQ_PASSWORD:admin}
+spring.rabbitmq.ssl.enabled=false
+notifications.queue=consultation.notifications
