scheduling in env

--- a/src/main/resources/application-docker.properties
+++ b/src/main/resources/application-docker.properties
@@ -28,3 +28,4 @@ spring.rabbitmq.username=${RABBITMQ_USER:admin}
 spring.rabbitmq.password=${RABBITMQ_PASSWORD:admin}
 spring.rabbitmq.ssl.enabled=false
 notifications.queue=consultation.notifications
+notifications.cron=${NOTIFICATIONS_CRON:0 0 8 * * *}
