--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -35,3 +35,4 @@ spring.rabbitmq.username=${RABBITMQ_USER:guest}
 spring.rabbitmq.password=${RABBITMQ_PASSWORD:guest}
 spring.rabbitmq.ssl.enabled=false
 notifications.queue=consultation.notifications
+notifications.cron=${NOTIFICATIONS_CRON:0 0 8 * * *}
