feat(notifications): implement delayed notifications with rabbitmq
- Add delay queue configuration with TTL and DLX
- Update publisher to support immediate and delayed messages
- Create test controller for triggering delayed notifications
- Refactor consumer to handle delayed messages and retries
- Add comprehensive documentation for notification system

--- a/src/main/resources/application-docker.properties
+++ b/src/main/resources/application-docker.properties
@@ -28,4 +28,11 @@ spring.rabbitmq.username=${RABBITMQ_USER:admin}
 spring.rabbitmq.password=${RABBITMQ_PASSWORD:admin}
 spring.rabbitmq.ssl.enabled=false
 notifications.queue=consultation.notifications
+notifications.exchange=consultation.notifications.exchange
+notifications.routing-key=notification.consultation
+notifications.delay.queue=consultation.notifications.delay
+notifications.delay.exchange=consultation.notifications.delay.exchange
+notifications.delay.routing-key=notification.consultation.delay
+notifications.delay.ttl-ms=300000
+notifications.delay.poll-ms=30000
 notifications.cron=${NOTIFICATIONS_CRON:0 0 8 * * *}
